--- a/public/index.html
+++ b/public/index.html
@@ -1,26 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
+    <meta charset="utf-g" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#1e40af" />
-    <meta name="description" content="iTaukei AI Cultural Safeguarding Platform - Prototype Demonstration" />
-    <meta property="og:title" content="iTaukei AI Cultural Safeguarding Platform" />
-    <meta property="og:description" content="AI solution for protecting and preserving iTaukei cultural heritage" />
-    <meta property="og:type" content="website" />
-    <title>iTaukei AI Cultural Safeguarding Platform</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <style>
-      body { font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif; }
-    </style>
+    <meta name="theme-color" content="#000000" />
+    <meta
+      name="description"
+      content="iTaukei AI Cultural Safeguarding Platform - Prototype Demonstration"
+    />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <title>iTaukei AI Prototype</title>
   </head>
   <body>
-    <noscript>
-      <div style="padding: 20px; text-align: center; background: #fee2e2; color: #991b1b;">
-        <h2>JavaScript Required</h2>
-        <p>This iTaukei AI Cultural Safeguarding Platform requires JavaScript to function properly.</p>
-      </div>
-    </noscript>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-  </body>
+    </body>
 </html>
